# PDV

./: app.sqlite3  app.sqlite3-shm  app.sqlite3-wal  index.html  package-lock.json  package.json  vite.config.ts
.docs/: Diagrama de classes.vsdx  Lógica do banco de dados.vsdx  Notação pé de galinha banco de dados.vsdx  ~$$Diagrama de classes.~vsdx  ~$$Lógica do banco de dados.~vsdx  ~$$Notação pé de galinha banco de dados.~vsdx
src/: App.tsx  main.tsx  styles.css
src-tauri/: Cargo.toml  app.sqlite3  app.sqlite3-wal  tauri.conf.json
src-tauri/src/: error.rs  main.rs  prelude.rs
src-tauri/src/controllers/: mod.rs  user_controller.rs
src-tauri/src/migrations/: admin.rs  mod.rs
src-tauri/src/models/: admin.rs  mod.rs  model.rs  user.rs
src-tauri/src/models/entities/: mod.rs  user.rs
src/Components/: Navbar.tsx
src/routes/: App.tsx  Contact.tsx  Dashboard.tsx  ErrorPage.tsx  Login.tsx
src/routes/compras/: AlterarCompra.tsx  CancelarCompra.tsx  Index.tsx  RegistrarCompra.tsx
src/routes/configs/: index.tsx
src/routes/vendas/: AlterarVenda.tsx  CancelarVenda.tsx  Index.tsx  Vender.tsx
